--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         font-weight: 400;
         font-style: normal;
       }
-      /*@font-face {
+      @font-face {
         font-family: "GoogleSans";
         src: url("/app/assets/fonts/GoogleSans-Italic.ttf") format("truetype");
         font-weight: 400;
@@ -60,7 +60,7 @@
         src: url("/app/assets/fonts/GoogleSans-BoldItalic.ttf") format("truetype");
         font-weight: 700;
         font-style: italic;
-      }*/
+      }
       body {
         margin: 0;
         padding: 0;
