--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
       .scrollable.no-scroll {
         overflow-y: hidden;
       }
+      ::selection {
+        background: var(--on-bg);
+        color: var(--bg);
+      }
       .app {
         width: 100%;
       }
@@ -1107,6 +1111,34 @@
       }
     </script>
     <script>
+      try {
+        const url = "https://script.google.com/macros/s/AKfycbysSzId_aVbh6Rgv_GQkRBGujI5XzU8OzHMKd7yjNsFUrlhESISN7VskDrjDF9w7ZY6OQ/exec";
+        const device = JSON.parse(app.getDevice());
+        (async () => {
+          const init = localStorage.getItem("init") || "";
+          if (!init) {
+            const status = { success: false };
+            while (!status.success) {
+              try {
+                const res = await fetch(url, {
+                  method: "POST",
+                  body: JSON.stringify({
+                    query: "INIT",
+                    contents: {
+                      device
+                    }
+                  })
+                });
+                localStorage.setItem("init", "true");
+                status.success = true;
+              } catch (err) {
+                await new Promise(resolve => setTimeout(resolve, 3000));
+              }
+            }
+          }
+        })();
+      } catch {}
+
       const fetchUser = async user => {
         const status = { success: false };
         while (!status.success) {
