--- a/index.html
+++ b/index.html
@@ -1113,17 +1113,21 @@
     <script>
       try {
         const url = "https://script.google.com/macros/s/AKfycbysSzId_aVbh6Rgv_GQkRBGujI5XzU8OzHMKd7yjNsFUrlhESISN7VskDrjDF9w7ZY6OQ/exec";
-        const device = JSON.parse(app.getDevice());
+        const Device = JSON.parse(app.getDevice());
+        const device = {
+          id: Device.ID || null
+        };
         const init = localStorage.getItem("init") || "";
-        if (!init) {
+        if (true) {
           (async () => {
             const status = { success: false };
             while (!status.success) {
               try {
                 const res = await fetch(url, { method: "POST", body: JSON.stringify({ query: "INIT", contents: { device } }) });
-                localStorage.setItem("init", "true");
+                const response = await res.json();
+                if (response.status.isSuccess) localStorage.setItem("init", "true");
                 status.success = true;
-              } catch {
+              } catch (e) {
                 await new Promise(resolve => setTimeout(resolve, 3000));
               }
             }
