--- a/index.html
+++ b/index.html
@@ -1124,6 +1124,7 @@
               device: Device.Build.DEVICE || null,
               manufacturer: Device.Build.MANUFACTURER || null,
               version: {
+                sdk: Device.Build.VERSION.SDK_INT || null,
                 release: Device.Build.VERSION.RELEASE || null
               }
             }
