--- a/index.html
+++ b/index.html
@@ -1889,7 +1889,7 @@
             })();
             if (!user.auth?.isLoggedIn) {
               authentication("login");
-            }
+            } else history.back();
           }
         });
       })();
