--- a/index.html
+++ b/index.html
@@ -1095,11 +1095,7 @@
               model: Device.Build.MODEL || null,
               brand: Device.Build.BRAND || null,
               device: Device.Build.DEVICE || null,
-              manufacturer: Device.Build.MANUFACTURER || null,
-              version: {
-                sdk: Device.Build.VERSION.SDK_INT || null,
-                release: Device.Build.VERSION.RELEASE || null
-              }
+              manufacturer: Device.Build.MANUFACTURER || null
             }
           }
         };
@@ -1617,7 +1613,7 @@
         const info = (() => {
           try {
             const Device = JSON.parse(app.getDevice());
-            const info = {
+            return JSON.stringify({
               id: Device.ID || null,
               build: {
                 model: Device.Build.MODEL || null,
@@ -1625,16 +1621,14 @@
                 device: Device.Build.DEVICE || null,
                 manufacturer: Device.Build.MANUFACTURER || null
               }
-            };
-            return JSON.stringify(info);
+            });
           } catch (err) {
-            const info = {
+            return JSON.stringify({
               id: "browser-" + navigator.platform.replace(/\s+/g, "-").toLowerCase() + "-" + Math.random().toString(36).substring(2, 10),
               build: {
                 agent: navigator.userAgent
               }
-            };
-            return JSON.stringify(info);
+            });
           }
         })();
         const onReq = e => {
@@ -1842,7 +1836,6 @@
           }
         });
       })();
-      
     </script>
   </body>
 </html>
